# tidepool

./: CHANGELOG.md  README.md  tidepool.cabal
app/: Main.hs
app/Sound/Tidal/: Parse.hs
app/Sound/Tidal/Parse/: TH.hs
